apps/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: casego-apps
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghcr.io/sewaustav/casego-auth:latest # {"$imagepolicy": "flux-system:casego-auth"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: jwt-keys
              mountPath: /app/keys
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 384Mi
          readinessProbe:
            httpGet:
              path: /api/v1/health/
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health/
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: jwt-keys
          secret:
            secretName: auth-jwt-keys
