apps/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: casego-apps
spec:
  selector:
    app: auth
  ports:
    - port: 8000
      targetPort: http
